change run for build stage

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,4 @@ jobs:
 
     steps:
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag plan-b-ot
+      run: docker build --tag plan-b-ot .
