--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
       
-    - name: Build the Docker image
-      run: docker build --tag plan-b-ot .
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Build the docker image
+      run: docker build . --tag ghcr.io/maxcluster/plan-b-ot:latest 
+
+    - name: Publish the docker image
+      run: docker push ghcr.io/maxcluster/plan-b-ot:latest
